# PR4-CyA-2425

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  input_file.cc  output.txt
include/cya/: args.h  code_analyzer.h  command.h  program.h  token.h  token_definition.h  token_definitions.h  utils.h
src/: CMakeLists.txt  code_analyzer.cc  command.cc  main.cc  program.cc  token.cc  utils.cc
test/: CMakeLists.txt
